== 0.6.2

== 0.6.1 (January 14, 2013)

* Bug Fix
  * Fixed a bug that caused all enrolled trainees to be notified of seminars instead of just current trainees

== 0.6.0 (January 11, 2013)

* Enhancements
  * Seminar attendance can now be tracked for enrolled trainees
  * Updated to Contour 1.1.2 and use Contour pagination theme
  * Seminar Reminder email added for current trainees

== 0.5.5 (January 8, 2013)

* Security Fix
  * Updated Rails to 3.2.11

== 0.5.4 (January 3, 2013)

* Security Fix
  * Updated Rails to 3.2.10

* Bug Fix
  * User activation emails are no longer sent out when a user's status is changed from pending to inactive

== 0.5.3 (November 28, 2012)

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Contour updated to 1.1.1

== 0.5.2 (October 25, 2012)

* Enhancements
  * Restructured login page to give clearer distinctions between all of the login types
  * Added "Unknown" Citizenship Status category
  * Preceptors are now notified that they need to confirm emails after editing their existing email address

* Bug Fix
  * Removed TableScroll that was causing the column headers to not properly line up in some browsers
  * Fixed the link to the RSS feed

== 0.5.1 (September 17, 2012)

* Enhancements
  * Preceptor Other Support document now a file (docx, doc, pdf) upload
  * Administrators can export selected preceptor information to a CSV file
  * Preceptor page lists applicants who have the preceptor set as their primary or secondary preceptor
  * Deleting preceptors or applicants sets the email field to blank so that the email can be potentially reused
  * Applicant help buttons on applicant pages that create help request emails for the Training Grant Administrator

* Refactoring
  * Unused CV variable has been removed, (previously replaced by curriculum_vitae)

== 0.5.0 (August 28, 2012)

* Enhancements
  * Applicant updates
    * Multiple degrees can be added to applicants